# cdp-plugin

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/workflows/: build.yml  release.yml
installer/: cdp-plugin.iss  license.txt  readme-mac.txt  readme-win.txt
resources/: App-Info.plist.in  AppIcon.afdesign  app-icon.rc.in
resources/AppIcon.icon/: icon.json
resources/mac-icon/: AppIcon.icns  Assets.car
resources/web-dist/: package.json
resources/web-dist/fonts/: bdf2ttf.py
scripts/: release.sh
src/: composers_desktop_plugin.cpp  composers_desktop_plugin.h  composers_desktop_plugin_editor_bridge.h  composers_desktop_plugin_editor_generic.cpp  composers_desktop_plugin_editor_mac.mm  composers_desktop_plugin_editor_resources.h  composers_desktop_plugin_editor_win.cpp
src/cdp-sampler/: CDPSampler.h
